--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li><a href="#home">Swesos</a></li>
                     <li><a href="#organization">Organizers</a></li>
                     <li><a href=""></a></li>
-					<li><a href="#presentations">Accepted presentations</a></li>
+					<li><a href="#registration">Registration</a></li>
 					<li><a href="#agenda">Agenda</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -49,7 +49,9 @@
                             <p>
                             The event is the place where industry and academia meet to discuss about achievements, challenges, oingoing research and future plan about SoSs.
                             The event is fairly informal, with a focus on presentations and interactions rather than paper publishing. Participation is free of charge.</p>
-                            
+                            <p>
+                            <h5>Registration is now open: <a href="https://docs.google.com/forms/d/e/1FAIpQLSel6S8w2L8M23DAALOwhlAEtxugI5bPV7ZNzQz-IelLiDY9tw/viewform" target="blank">registration link</a>.</h5>
+                            </p>
                             <p>
                             <h5>Submit your paper!</h5>
                             <b>Deadline:</b> June 30.<br>
@@ -100,16 +102,16 @@
 
 <!-- Organization -->
 <div class="wrapper wrapper-style1">
-    <article id="presentations">
+    <article id="registration">
         <header>
-            <h2>Accepted presentations</h2>
+            <h2>Registration</h2>
         </header>
         <div class="container">
             <div class="row">
                 <div class="12u">
                     <section class="box box-style1">
                         <p>
-                        The list of accepted presentations will be published soon!
+                        The partecipation to the event is free of charge, however to facilitate the organization we kindly ask you to register to the event by following this <a href="https://docs.google.com/forms/d/e/1FAIpQLSel6S8w2L8M23DAALOwhlAEtxugI5bPV7ZNzQz-IelLiDY9tw/viewform" target="blank">link</a>.
                         </p>
                     </section>
                 </div>
@@ -118,7 +120,7 @@
     </article>
 </div>
 
-		<!-- Agenda -->
+<!-- Agenda -->
 			<div class="wrapper wrapper-style3">
 				<article id="agenda">
 					<header>
